[project]
name = "youbet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.1",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
